example/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: sai
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
